--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "antonioturdo/italia-bundle",
+    "description": "A symfony bundle that helps development taking into account italian laws",
     "type": "symfony-bundle",
     "keywords": ["italy", "italia"],
     "authors": [
