--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "autoload": {
         "psr-4": { "AntonioTurdo\\Bundle\\ItaliaBundle\\": "src/" }
     },
+    "minimum-stability": "beta",
     "extra": {
         "branch-alias": {
            
