--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "minimum-stability": "beta",
     "extra": {
         "branch-alias": {
-           
+            "dev-master": "0.0.1"   
         }
     }
 }
