--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "minimum-stability": "beta",
     "extra": {
-        "branch-alias": {  
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
         }
     }
 }
