--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony/config": "^3.4|^4.0",
         "symfony/dependency-injection": "^3.4|^4.0",
         "symfony/framework-bundle": "^3.4|^4.0",
-        "antonioturdo/codice-fiscale": "master-dev"
+        "davidepastore/codice-fiscale": "dev-validator"
     },
     "require-dev": {
     },
